[gd_scene load_steps=10 format=2]

[ext_resource path="res://Store/Grant_Wood_-_American_Gothic_-_Google_Art_Project.jpg" type="Texture" id=1]
[ext_resource path="res://Common/food_basic.png" type="Texture" id=2]
[ext_resource path="res://Common/food_good.png" type="Texture" id=3]
[ext_resource path="res://Common/food_best.png" type="Texture" id=4]
[ext_resource path="res://Store/Store.gd" type="Script" id=5]
[ext_resource path="res://Store/cash.jpg" type="Texture" id=6]
[ext_resource path="res://Store/counter.png" type="Texture" id=7]
[ext_resource path="res://Common/AFood.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.168627, 0.168627, 0.168627, 0.639216 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.741176, 0.992157, 0.968627, 0.615686 )
border_blend = true
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[node name="Store" type="Node2D"]
script = ExtResource( 5 )

[node name="GrantWood-AmericanGothic-GoogleArtProject" type="Sprite" parent="."]
position = Vector2( 775.5, 443.516 )
scale = Vector2( 0.38125, 0.38125 )
texture = ExtResource( 1 )

[node name="BuyBasic" type="Button" parent="."]
margin_left = 1221.0
margin_top = 195.0
margin_right = 1820.0
margin_bottom = 231.0
text = "Buy $1"
icon = ExtResource( 2 )

[node name="BuyBasicL" type="Label" parent="BuyBasic"]
margin_top = 46.0
margin_right = 640.0
margin_bottom = 148.0
text = "Nutritious pellets in bulk. Chickens recover 1 fatigue."
autowrap = true

[node name="BuyGood" type="Button" parent="."]
margin_left = 1221.0
margin_top = 343.0
margin_right = 1820.0
margin_bottom = 379.0
text = "Buy $10"
icon = ExtResource( 3 )

[node name="BuyGoodL" type="Label" parent="BuyGood"]
margin_top = 46.0
margin_right = 599.0
margin_bottom = 148.0
text = "Fine grasses. Chickens recover 1 fatigue and gain a speed boost during the next race."
autowrap = true

[node name="BuyBest" type="Button" parent="."]
margin_left = 1221.0
margin_top = 523.0
margin_right = 1820.0
margin_bottom = 559.0
text = "Buy $50"
icon = ExtResource( 4 )

[node name="BuyBestL" type="Label" parent="BuyBest"]
margin_top = 46.0
margin_right = 599.0
margin_bottom = 183.0
text = "A delicious blend of herbs and insects. Chickens recover 2 fatigue and gain a speed boost during the next race."
autowrap = true

[node name="FoodTitle" type="Label" parent="."]
margin_left = 1221.0
margin_top = 101.0
margin_right = 1820.0
margin_bottom = 133.0
text = "FOOD"
align = 1

[node name="Farm" type="Label" parent="."]
margin_left = 1221.0
margin_top = 713.0
margin_right = 1820.0
margin_bottom = 745.0
text = "FARM"
align = 1

[node name="Current" type="Label" parent="Farm"]
margin_top = 77.0
margin_right = 385.0
margin_bottom = 112.0
text = "Current: Covert Balcony pen"

[node name="Next" type="Label" parent="Farm"]
margin_top = 108.0
margin_right = 321.0
margin_bottom = 150.0
text = "Next: Small Farm pen"

[node name="Upgrade" type="Button" parent="Farm"]
margin_top = 150.0
margin_right = 385.0
margin_bottom = 186.0
text = "Upgrade Pen $100"

[node name="InfoLabel" type="Label" parent="."]
margin_left = 305.0
margin_top = 790.0
margin_right = 1114.0
margin_bottom = 857.0
text = "Food is sold in bundles big enough to feed your chickens for one day. They will always eat the best food you have first."
align = 1
autowrap = true

[node name="ToCoop" type="Button" parent="."]
margin_left = 55.0
margin_top = 67.0
margin_right = 286.0
margin_bottom = 149.0
text = "< Back To Coop"

[node name="Counter" type="Sprite" parent="."]
position = Vector2( 700.501, 708.516 )
scale = Vector2( 2.47667, 0.525 )
texture = ExtResource( 7 )

[node name="Cash" type="Sprite" parent="."]
position = Vector2( 442.501, 582.516 )
scale = Vector2( 0.322785, 0.322785 )
texture = ExtResource( 6 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="Money" type="Label" parent="UI"]
margin_left = 14.0
margin_top = 845.0
margin_right = 164.0
margin_bottom = 877.0
text = "Money: $100"

[node name="Food" type="Label" parent="UI"]
margin_left = 14.0
margin_top = 764.0
margin_right = 102.0
margin_bottom = 796.0
text = "Food:"

[node name="Panel" type="PanelContainer" parent="UI/Food"]
margin_left = 7.0
margin_top = 32.0
margin_right = 88.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="FoodBox" type="HBoxContainer" parent="UI/Food/Panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 79.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BEST" parent="UI/Food/Panel/FoodBox" instance=ExtResource( 8 )]
margin_right = 51.0
margin_bottom = 36.0

[node name="GOOD" parent="UI/Food/Panel/FoodBox" instance=ExtResource( 8 )]
visible = false
margin_left = 55.0
margin_right = 106.0
margin_bottom = 36.0
food_type = 1

[node name="BASIC" parent="UI/Food/Panel/FoodBox" instance=ExtResource( 8 )]
visible = false
margin_left = 55.0
margin_right = 106.0
margin_bottom = 36.0
food_type = 2

[connection signal="pressed" from="BuyBasic" to="." method="_on_BuyBasic_pressed"]
[connection signal="pressed" from="BuyGood" to="." method="_on_BuyGood_pressed"]
[connection signal="pressed" from="BuyBest" to="." method="_on_BuyBest_pressed"]
[connection signal="pressed" from="Farm/Upgrade" to="." method="_on_Upgrade_pressed"]
[connection signal="pressed" from="ToCoop" to="." method="_on_ToCoop_pressed"]
